samples/_failures_safe/1761597885_07133f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3771949.c: In function ‘read_log_file’:
./samples/SAFE/__tmp_b3771949.c:139:9: error: expected declaration or statement at end of input
  139 |         char timestamp[20];
      |         ^~~~
./samples/SAFE/__tmp_b3771949.c:139:9: error: expected declaration or statement at end of input
